     (Martin Pool, #63894)

   * Experimental directory formats can now be marked with
     ``experimental = True`` during registration. (Ian Clatworthy)

  DOCUMENTATION:

   * New *Bazaar in Five Minutes* guide.  (Matthew Revell)

   * The hooks reference documentation is now converted to html as expected.
     (Ian Clatworthy)

  BUG FIXES:

   * Connection error reporting for the smart server has been fixed to
     display a user friendly message instead of a traceback.
     (Ian Clatworthy, #115601)

   * Make sure to use ``O_BINARY`` when opening files to check their
     sha1sum. (Alexander Belchenko, John Arbash Meinel, #153493)

   * Fix a problem with Win32 handling of the executable bit.
     (John Arbash Meinel, #149113)

   * ``bzr+ssh://`` and ``sftp://`` URLs that do not specify ports explicitly
     no longer assume that means port 22.  This allows people using OpenSSH to
     override the default port in their ``~/.ssh/config`` if they wish.  This
     fixes a bug introduced in bzr 0.91.  (Andrew Bennetts, #146715)

   * Commands reporting exceptions can now be profiled and still have their
     data correctly dumped to a file. For example, a ``bzr commit`` with
     no changes still reports the operation as pointless but doing so no
     longer throws away the profiling data if this command is run with
     ``--lsprof-file callgrind.out.ci`` say. (Ian Clatworthy)

   * Fallback to ftp when paramiko is not installed and sftp can't be used for
     ``tests/commands`` so that the test suite is still usable without
     paramiko.
     (Vincent Ladeuil, #59150)

   * Fix commit ordering in corner case. (Aaron Bentley, #94975)

   * Fix long standing bug in partial commit when there are renames 
     left in tree. (Robert Collins, #140419)

   * Fix selftest semi-random noise during http related tests.
     (Vincent Ladeuil, #140614)

   * Fix typo in ftp.py making the reconnection fail on temporary errors.
     (Vincent Ladeuil, #154259)
